<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefcat_runtime_status">
        <Preference
            android:key="runtime_status"
            android:title="@string/pref_runtime_status_title"
            android:summary="@string/pref_runtime_status_summary"
            android:selectable="false"/>
            
        <Preference
            android:key="log_output"
            android:title="@string/pref_log_output_title"
            android:summary="@string/pref_log_output_summary"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefcat_network_config">
        <EditTextPreference
            android:key="ip_address"
            android:title="@string/pref_ip_title"
            android:dialogTitle="@string/pref_ip_dialog_title"
            android:defaultValue="127.0.0.1"/>
            
        <EditTextPreference
            android:key="server_port"
            android:title="@string/pref_port_title"
            android:dialogTitle="@string/pref_port_dialog_title"
            android:inputType="number"
            android:defaultValue="9981"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefcat_injection_related">
        <EditTextPreference
            android:key="command_input"
            android:title="@string/pref_command_input_title"
            android:dialogTitle="@string/pref_command_input_dialog_title"
            android:defaultValue="id"/>
        
        <EditTextPreference
            android:key="setuid_input"
            android:title="@string/pref_setuid_title"
            android:dialogTitle="@string/pref_setuid_dialog_title"
            android:defaultValue="1000"/>
        
         <EditTextPreference
            android:key="setgid_input"
            android:title="@string/pref_setgid_title"
            android:dialogTitle="@string/pref_setgid_dialog_title"
            android:defaultValue="1000"/>
        <EditTextPreference
            android:key="setgroup_input"
            android:title="@string/pref_setgroup_title"
            android:dialogTitle="@string/pref_setgroup_dialog_title"/>
        <EditTextPreference
            android:key="setselinux_input"
            android:title="@string/pref_setselinux_title"
            android:summary="@string/pref_setselinux_summary"
            android:defaultValue="platform:privapp:targetSdkVersion=29:complete"
            android:dialogTitle="@string/pref_setselinux_dialog_title"/>
         <EditTextPreference
            android:key="zyg1"
            android:dialogTitle="@string/pref_zyg1_dialog_title"
            android:defaultValue="3000"
            android:title="@string/pref_zyg1_title"/>
         <EditTextPreference
            android:key="zyg2"
            android:title="@string/pref_zyg2_title"
            android:defaultValue="5157"
            android:dialogTitle="@string/pref_zyg2_dialog_title"/>
         <EditTextPreference
            android:key="zyg3"
            android:title="@string/pref_zyg3_title"
            android:defaultValue="1400"/>
        <Preference
            android:key="1312"
            android:title="@string/pref_warning_title"
            android:summary="@string/pref_warning_summary"/>
            <Preference
            android:key="terminal"
            android:title="@string/pref_terminal_title"
            android:summary="@string/pref_terminal_summary"/>
        <Preference
            android:key="execute_btn"
            android:title="@string/pref_execute_btn_title"
            android:summary="@string/pref_execute_btn_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefcat_server_control">
        <Preference
            android:key="start_server"
            android:title="@string/pref_start_server_title"
            android:summary="@string/pref_start_server_summary"/>

        <Preference
            android:key="stop_server"
            android:title="@string/pref_stop_server_title"
            android:summary="@string/pref_stop_server_summary"
            android:enabled="false"/>
    </PreferenceCategory>
     <Preference
        android:key="advanced_trigger"
        android:title="@string/pref_advanced_trigger_title"
        android:summary="@string/pref_advanced_trigger_summary"/>
   <PreferenceCategory
        android:key="advanced_category"
        android:title="@string/prefcat_advanced"
        android:visible="true"> <!-- 初始状态为隐藏 -->
        
        <Preference
            android:key="shell_terminal"
            android:title="@string/pref_shell_terminal_title"
            android:summary="@string/pref_shell_terminal_summary"/>
            <Preference
            android:key="top_data"
            android:title="@string/pref_top_data_title"
            android:summary="@string/pref_top_data_summary"/>
       <MultiSelectListPreference
        android:key="multi_select_preference"
        android:title="@string/pref_multi_select_title"
        android:summary="@string/pref_multi_select_summary"
        android:dialogTitle="@string/pref_multi_select_dialog_title"
        android:entries="@array/multi_select_options"
        android:entryValues="@array/multi_select_values"
         />
        
    </PreferenceCategory>

    <!-- 添加一个触发按钮 -->
   
</PreferenceScreen>
